WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184661
Inconsistent EGL defines in ImageBufferCairo
https://bugs.webkit.org/show_bug.cgi?id=184661
Summary
Inconsistent EGL defines in ImageBufferCairo
Pablo Saavedra
Reported
2018-04-16 13:16:15 PDT
On revision
r219391
libepoxy is added. The headers in ImageBufferCairo.cpp become inconsistent when 2D canvas is enabled (-DENABLE_ACCELERATED_2D_CANVAS=ON) due to a redefinition error during the Webkit build: ... /usr/include/GLES2/gl2.h:503:82: error: 'void epoxy_glAttachShader(GLuint, GLuint)' redeclared as different kind of symbol GL_APICALL void GL_APIENTRY glAttachShader (GLuint program, GLuint shader); ... Related to
https://bugs.webkit.org/show_bug.cgi?id=172104
Attachments
Patch
(2.48 KB, patch)
2018-04-16 13:28 PDT
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
patch
(1.94 KB, patch)
2018-04-16 13:35 PDT
,
Pablo Saavedra
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pablo Saavedra
Comment 1
2018-04-16 13:28:11 PDT
Created
attachment 338031
[details]
Patch
Pablo Saavedra
Comment 2
2018-04-16 13:35:29 PDT
Created
attachment 338032
[details]
patch
WebKit Commit Bot
Comment 3
2018-04-16 23:54:32 PDT
Comment on
attachment 338032
[details]
patch Clearing flags on attachment: 338032 Committed
r230702
: <
https://trac.webkit.org/changeset/230702
>
WebKit Commit Bot
Comment 4
2018-04-16 23:54:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-04-16 23:55:16 PDT
<
rdar://problem/39482971
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug